# claude-agent-prompting

./: .env.example  AGENTS.md  CLAUDE.md  Makefile  README.md  demo.tape  pyproject.toml
claude_agent_harness_opt/: cli.py  matrix_coverage.py  model_matrix.py  pr_packets.py  value_bar.py
claude_agent_harness_optimization/: adapters.py  cli.py  harness_checks.py  model_matrix.py  pr_packets.py  reports.py
claude_agent_prompting/: __init__.py  agent_audit.py  cli.py  trace_review.py  trace_suite.py
docs/: autoresearch-hill-climbing.md  codex-and-model-migration-harnesses.md  confirmed-improvements.md  credentialed-service-probes.md  firecrawl-mcp-tool-tuning.md  public-mcp-sweep.md  repeatable-harness-lab.md  sdk-harness-coverage.md  setup.md  source-map.md  supabase-mcp-tool-tuning.md  surface-inventory.md  tool-writing-best-practices.md  tool_tuning_demo_sample.txt  trace-review.md  upstream-pr-flywheel.md
scripts/: build_gstack_skill_target.py  check_command_surfaces.py  check_eval_surfaces.py  check_finding_packets.py  check_human_docs.py  check_optimize_shortcuts.py  check_package_surface.py  check_prompt_recipe_surfaces.py  check_surface_inventory.py  live_sdk_smoke.py  optimize_mcp.py  probe_service_keys.py  render_demo_gif.py
tests/: test_adapters.py  test_agent_audit.py  test_check_command_surfaces_script.py  test_check_eval_surfaces_script.py  test_check_finding_packets_script.py  test_check_human_docs_script.py  test_check_optimize_shortcuts_script.py  test_check_package_surface_script.py  test_check_prompt_recipe_surfaces_script.py  test_cli.py  (+8 more)
(+56 files in other folders)
